--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -1,10 +1,7 @@
 @import be.objectify.deadbolt.scala.AuthenticatedRequest
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, title: String, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String])(implicit request: AuthenticatedRequest[Any])
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String])(implicit request: AuthenticatedRequest[Any])
 
-@timetoteachAppMain(handler, title, userPictureUri, userFirstName, userFamilyName) {
-
-    <h3 class="header-highlight display-4 text-center">Class Timetable</h3>
-
+@timetoteachAppMain(handler, "Class Timetable", userPictureUri, userFirstName, userFamilyName) {
 
     <aside id="class-timetable-subject-nav">
         <div class="container text-center class-timetable-subject-nav-background justify-content-center">
