--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -23,6 +23,7 @@
         <div class="d-none g-signin2" ></div>
 
         <nav id="appMainNavbar" class="navbar navbar-expand-lg navbar-white bg-white fixed-top">
+
             <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#startupNavbar" aria-controls="navbarTogglerDemo03"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -32,6 +33,10 @@
                 <img src="@routes.Assets.versioned("icons/ttt_owl.png")" alt="logo" height="26">
                 <span class="ttt-icon-writing display-5">Time to TEACH</span>
             </a>
+
+            <div id="app-main-screen-title" class="d-flex ml-auto">
+                <h3>@title</h3>
+            </div>
 
             <div class="collapse navbar-collapse" id="startupNavbar">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
