--- a/server/public/stylesheets/timetable.css
+++ b/server/public/stylesheets/timetable.css
@@ -2,6 +2,10 @@
     margin-top: 2rem;
 }
 
+#class-timetable-subject-nav {
+    margin-top: 2rem;
+}
+
 #class-timetable-subject-nav h4 {
     color: white;
     text-shadow: 1px 1px #444;
