--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -22,7 +22,7 @@
     <body>
         <div class="d-none g-signin2" ></div>
 
-        <nav id="appMainNavbar" class="navbar navbar-expand-lg navbar-white bg-white fixed-top">
+        <nav id="appMainNavbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 
             <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#startupNavbar" aria-controls="navbarTogglerDemo03"
@@ -34,8 +34,8 @@
                 <span class="ttt-icon-writing display-5">Time to TEACH</span>
             </a>
 
-            <div id="app-main-screen-title" class="d-flex ml-auto">
-                <h3>@title</h3>
+            <div id="app-main-screen-title">
+                <h4 class="display-5">@title</h4>
             </div>
 
             <div class="collapse navbar-collapse" id="startupNavbar">
