--- a/server/public/stylesheets/timetable-colours.css
+++ b/server/public/stylesheets/timetable-colours.css
@@ -73,6 +73,10 @@
     color: white;
 }
 
+.subject-assembly-button {
+    background-color: rgba(255, 0, 0, 0.65);
+    color: white;
+}
 .subject-assembly {
     background-color: rgba(255, 0, 0, 0.65);
     color: white;
