Classtimetable: Selecting subjects looking more vivid. Can also drag subjects now

--- a/server/public/stylesheets/timetable-colours.css
+++ b/server/public/stylesheets/timetable-colours.css
@@ -69,8 +69,8 @@
 }
 
 .subject-teacher-covertime {
-    background-color: rgba(0, 53, 60, 0.5);
-    color: white;
+    background-color: rgba(0, 53, 60, 0.2);
+    color: black;
 }
 
 .subject-assembly-button {
