--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -10,52 +10,66 @@
 
             <div class="row justify-content-center class-timetable-subject-row">
                 <div class="col-sm-2">
-                    <div id="subject-golden-time" class="btn rounded subject-golden-time class-timetable-button" type="button">Golden Time</div>
+                    <div id="subject-golden-time" class="btn rounded subject-golden-time class-timetable-button"
+                    type="button" draggable="true">Golden Time</div>
                 </div>
                 <div class="col-sm-2">
-                    <div id="subject-other" class="btn rounded subject-other class-timetable-button" type="button">Other</div>
-                </div>
-            </div>
-
-            <div class="row justify-content-center class-timetable-subject-row">
-                <div id="subject-ict" class="col-sm-2">
-                    <div class="btn rounded subject-ict class-timetable-button" type="button">ICT</div>
-                </div>
-                <div class="col-sm-2">
-                    <div id="subject-music" class="btn rounded subject-music class-timetable-button" type="button">Music</div>
-                </div>
-                <div class="col-sm-2">
-                    <div id="subject-drama" class="btn rounded subject-drama class-timetable-button" type="button">Drama</div>
-                </div>
-                <div class="col-sm-2">
-                    <div id="subject-health" class="btn rounded subject-health class-timetable-button" type="button">Health</div>
-                </div>
-                <div class="col-sm-2">
-                    <div id="subject-teacher-covertime" class="btn rounded subject-teacher-covertime class-timetable-button" type="button">RCCT</div>
-                </div>
-                <div class="col-sm-2">
-                    <div id="subject-assembly-button" class="btn rounded subject-assembly-button class-timetable-button" type="button">Assembly</div>
+                    <div id="subject-other" class="btn rounded subject-other class-timetable-button"
+                    type="button" draggable="true">Other</div>
                 </div>
             </div>
 
             <div class="row justify-content-center class-timetable-subject-row">
                 <div class="col-sm-2">
-                    <div id="subject-reading" class="btn rounded subject-reading class-timetable-button" type="button">Reading</div>
+                    <div id="subject-ict" class="btn rounded subject-ict class-timetable-button"
+                    type="button" draggable="true">ICT</div>
                 </div>
                 <div class="col-sm-2">
-                    <div id="subject-spelling" class="btn rounded subject-spelling class-timetable-button" type="button">Spelling</div>
+                    <div id="subject-music" class="btn rounded subject-music class-timetable-button"
+                    type="button" draggable="true">Music</div>
                 </div>
                 <div class="col-sm-2">
-                    <div id="subject-writing" class="btn rounded subject-writing class-timetable-button" type="button">Writing</div>
+                    <div id="subject-drama" class="btn rounded subject-drama class-timetable-button"
+                    type="button" draggable="true">Drama</div>
                 </div>
                 <div class="col-sm-2">
-                    <div id="subject-maths" class="btn rounded subject-maths class-timetable-button" type="button">Maths</div>
+                    <div id="subject-health" class="btn rounded subject-health class-timetable-button"
+                    type="button" draggable="true">Health</div>
                 </div>
                 <div class="col-sm-2">
-                    <div id="subject-topic" class="btn rounded subject-topic class-timetable-button" type="button">IDL</div>
+                    <div id="subject-teacher-covertime" class="btn rounded subject-teacher-covertime class-timetable-button"
+                    type="button" draggable="true">RCCT</div>
                 </div>
                 <div class="col-sm-2">
-                    <div id="subject-physical-education" class="btn rounded subject-physical-education class-timetable-button" type="button">P.E.</div>
+                    <div id="subject-assembly-button" class="btn rounded subject-assembly-button class-timetable-button"
+                    type="button" draggable="true">Assembly</div>
+                </div>
+            </div>
+
+            <div class="row justify-content-center class-timetable-subject-row">
+                <div class="col-sm-2">
+                    <div id="subject-reading" class="btn rounded subject-reading class-timetable-button"
+                    type="button" draggable="true">Reading</div>
+                </div>
+                <div class="col-sm-2">
+                    <div id="subject-spelling" class="btn rounded subject-spelling class-timetable-button"
+                    type="button" draggable="true">Spelling</div>
+                </div>
+                <div class="col-sm-2">
+                    <div id="subject-writing" class="btn rounded subject-writing class-timetable-button"
+                    type="button" draggable="true">Writing</div>
+                </div>
+                <div class="col-sm-2">
+                    <div id="subject-maths" class="btn rounded subject-maths class-timetable-button"
+                    type="button" draggable="true">Maths</div>
+                </div>
+                <div class="col-sm-2">
+                    <div id="subject-topic" class="btn rounded subject-topic class-timetable-button"
+                    type="button" draggable="true">IDL</div>
+                </div>
+                <div class="col-sm-2">
+                    <div id="subject-physical-education" class="btn rounded subject-physical-education class-timetable-button"
+                    type="button" draggable="true">P.E.</div>
                 </div>
             </div>
 
