Made the timetable buttons only active when a subject is selected

--- a/server/public/stylesheets/timetable-colours.css
+++ b/server/public/stylesheets/timetable-colours.css
@@ -35,7 +35,7 @@
 .subject-empty {
     background-color: rgba(211, 211, 211, 0.5);
     font-weight: lighter;
-    color: blue;
+    color: grey;
 }
 
 .subject-ict {
