--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -6,7 +6,7 @@
 
     <aside id="class-timetable-subject-nav">
         <div class="container text-center class-timetable-subject-nav-background justify-content-center">
-            <h4>Subjects</h4>
+            @*<h4>Subjects</h4>*@
 
             <div class="row justify-content-center class-timetable-subject-row">
                 <div class="col-sm-2">
@@ -127,21 +127,23 @@
                 <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Mon</div>
                 <div class="col-sm-3 ">
                     <div class="row">
-                        <button class="col-12 rounded subject subject-empty" data-toggle="modal"
+                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
                         data-target="#addLessonsModal">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column "></div>
                 <div class="col-sm-3">
                     <div class="row">
-                        <button class="col-12 rounded subject subject-empty">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
+                        data-target="#addLessonsModal">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column"></div>
 
                 <div class="col-sm-3">
                     <div class="row">
-                        <button class="col-12 rounded subject subject-empty">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
+                        data-target="#addLessonsModal">EMPTY</button>
                     </div>
                 </div>
             </div>
@@ -152,20 +154,23 @@
                 <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Tue</div>
                 <div class="col-sm-3 ">
                     <div class="row">
-                        <button class="col-12 rounded subject subject-empty">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
+                        data-target="#addLessonsModal">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column "></div>
                 <div class="col-sm-3">
                     <div class="row">
-                        <button class="col-12 rounded subject subject-empty">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
+                        data-target="#addLessonsModal">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column"></div>
 
                 <div class="col-sm-3">
                     <div class="row">
-                        <button class="col-12 rounded subject subject-empty">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
+                        data-target="#addLessonsModal">EMPTY</button>
                     </div>
                 </div>
             </div>
@@ -176,20 +181,23 @@
                 <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Wed</div>
                 <div class="col-sm-3 ">
                     <div class="row">
-                        <button class="col-12 rounded subject subject-empty">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
+                        data-target="#addLessonsModal">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column "></div>
                 <div class="col-sm-3">
                     <div class="row">
-                        <button class="col-12 rounded subject subject-empty">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
+                        data-target="#addLessonsModal">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column"></div>
 
                 <div class="col-sm-3">
                     <div class="row">
-                        <button class="col-12 rounded subject subject-empty">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
+                        data-target="#addLessonsModal">EMPTY</button>
                     </div>
                 </div>
             </div>
@@ -200,20 +208,23 @@
                 <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Thu</div>
                 <div class="col-sm-3 ">
                     <div class="row">
-                        <button class="col-12 rounded subject subject-empty">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
+                        data-target="#addLessonsModal">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column "></div>
                 <div class="col-sm-3">
                     <div class="row">
-                        <button class="col-12 rounded subject subject-empty">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
+                        data-target="#addLessonsModal">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column"></div>
 
                 <div class="col-sm-3">
                     <div class="row">
-                        <button class="col-12 rounded subject subject-empty">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
+                        data-target="#addLessonsModal">EMPTY</button>
                     </div>
                 </div>
             </div>
@@ -224,20 +235,23 @@
                 <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Fri</div>
                 <div class="col-sm-3 ">
                     <div class="row">
-                        <button class="col-12 rounded subject subject-empty">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
+                        data-target="#addLessonsModal">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column "></div>
                 <div class="col-sm-3">
                     <div class="row">
-                        <button class="col-12 rounded subject subject-empty">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
+                        data-target="#addLessonsModal">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column"></div>
 
                 <div class="col-sm-3">
                     <div class="row">
-                        <button class="col-12 rounded subject subject-empty">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
+                        data-target="#addLessonsModal">EMPTY</button>
                     </div>
                 </div>
             </div>
@@ -451,63 +465,44 @@
         <br>
     </section>
 
-    <div class="modal fade" id="addLessonsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal " id="addLessonsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="addLessonsModalLabel">Add Lesson to Timetable</h5>
+                    <h5 class="modal-title" id="addLessonsModalLabel">
+                        Add [Lesson] to [Morning/Afternoon Session]</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form>
-                        <div class="form-group">
-                            <label for="selectLessonInputButton">Lesson To Add:</label>
-                            <input type="button" class="form-control" id="selectLessonInputButton"
-                            aria-describedby="selectLessonHelp" placeholder="Select Lesson" value="Choose Lesson - This will be grid">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                        1/3 Session
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 33%" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-
-                        <div id="andy">Hello</div>
-
-                        <hr>
-
-                        <div class="form-group">
-                            <label>Days to add lesson:</label>
-                            <div id="inputToAddLessonMonday-wrapper" class="form-check">
-                                <label class="form-check-label">
-                                    <input id="inputToAddLessonMonday" class="form-check-input" type="checkbox" value="">
-                                    Monday
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <label class="form-check-label">
-                                    <input id="inputToAddLessonTuesday" class="form-check-input" type="checkbox" value="">
-                                    Tuesday
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <label class="form-check-label">
-                                    <input id="inputToAddLessonWednesday" class="form-check-input" type="checkbox" value="">
-                                    Wednesday
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <label class="form-check-label">
-                                    <input id="inputToAddLessonThursday" class="form-check-input" type="checkbox" value="">
-                                    Thursday
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <label class="form-check-label">
-                                    <input id="inputToAddLessonFriday" class="form-check-input" type="checkbox" value="">
-                                    Friday
-                                </label>
-                            </div>
+                    </button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                        1/2 Session
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                    </form>
+                    </button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                        Full Session
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                        Specifically
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" ></div>
+                            </div>
+                    </button>
+
                 </div>
-                <div class="modal-footer">
+                <div id="addLessonsModalFooter" class="modal-footer" display="none" >
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-primary">Add To Timetable</button>
                 </div>
