Add specific option in timetable

--- a/server/public/stylesheets/timetable-colours.css
+++ b/server/public/stylesheets/timetable-colours.css
@@ -75,7 +75,7 @@
 
 .subject-assembly-button {
     background-color: rgba(255, 0, 0, 0.65);
-    color: white;
+    color: black;
 }
 .subject-assembly {
     background-color: rgba(255, 0, 0, 0.65);
