--- a/server/public/stylesheets/timetable.css
+++ b/server/public/stylesheets/timetable.css
@@ -3,7 +3,7 @@
 }
 
 #class-timetable-subject-nav {
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
 
 #class-timetable-subject-nav h4 {
@@ -23,12 +23,14 @@
 
 #class-timetable-section .small-column {
     font-size: smaller;
-    color: #999;
+    color: grey;
+    text-shadow: 1px 1px #efe;
 }
 
 .timetable-header {
     font-size: larger;
-    text-shadow: 1px 1px #ccc;
+    color: grey;
+    text-shadow: 1px 1px #efe;
 }
 
 .timetable-dayofweek-header {
@@ -91,4 +93,8 @@
 
 .class-timetable-subject-row {
     margin-bottom: 1rem;
+}
+
+#addLessonsModalFooter {
+    display: none;
 }
