--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -1,8 +1,30 @@
 @import be.objectify.deadbolt.scala.AuthenticatedRequest
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String])(implicit request: AuthenticatedRequest[Any])
 
-@timetoteachAppMain(handler, "Class Timetable  ---  Class: P4B --- TODO: Make nicer etc",
+@timetoteachAppMain(handler, "",
     userPictureUri, userFirstName, userFamilyName) {
+
+    <div class="conatiner">
+        <h1 class="text-center">Timetable : Class P4B</h1>
+    </div>
+
+    <div class="container">
+        <div class="alert alert-info alert-dismissible fade show" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            <p>Fill in your timetable by choosing a subject then selecting the relevant sessions.
+                You can either:-</p>
+            <ol>
+                <li>Drag a subject to a single time slot. e.g drag <strong>Reading</strong> to Tuesday <strong>
+                    Late Morning</strong> session</li>
+                <li>Select a subject by clicking once on it, then click on multiple time slots. e.g. <strong>Maths</strong>
+                    to 4 different time slots</li>
+            </ol>
+            In either case you will be given the option of how much of that session to fill. e.g. 1/3, 1/2 or Full session, or be more specific, say 9:45 to 10:15
+
+        </div>
+    </div>
 
     <aside id="class-timetable-subject-nav">
         <div class="container text-center class-timetable-subject-nav-background justify-content-center">
@@ -148,8 +170,6 @@
                 </div>
             </div>
 
-            <div class="row"><br></div>
-
             <div class="row dayoftheweek-row align-items-center">
                 <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Tue</div>
                 <div class="col-sm-3 ">
@@ -174,8 +194,6 @@
                     </div>
                 </div>
             </div>
-
-            <div class="row"><br></div>
 
             <div class="row dayoftheweek-row align-items-center">
                 <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Wed</div>
@@ -202,8 +220,6 @@
                 </div>
             </div>
 
-            <div class="row"><br></div>
-
             <div class="row dayoftheweek-row align-items-center">
                 <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Thu</div>
                 <div class="col-sm-3 ">
@@ -228,8 +244,6 @@
                     </div>
                 </div>
             </div>
-
-            <div class="row"><br></div>
 
             <div class="row dayoftheweek-row align-items-center">
                 <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Fri</div>
@@ -258,6 +272,14 @@
 
         </div>
 
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <br>
         <br>
         <br>
@@ -351,8 +373,6 @@
                 </div>
             </div>
 
-            <div class="row"><br></div>
-
             <div class="row dayoftheweek-row align-items-center">
                 <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Tue</div>
                 <div class="col-sm-3 ">
@@ -375,8 +395,6 @@
                     </div>
                 </div>
             </div>
-
-            <div class="row"><br></div>
 
             <div class="row dayoftheweek-row align-items-center">
                 <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Wed</div>
@@ -401,8 +419,6 @@
                     </div>
                 </div>
             </div>
-
-            <div class="row"><br></div>
 
             <div class="row dayoftheweek-row align-items-center">
                 <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Thu</div>
@@ -429,8 +445,6 @@
                     </div>
                 </div>
             </div>
-
-            <div class="row"><br></div>
 
             <div class="row dayoftheweek-row align-items-center">
                 <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Fri</div>
