change Weekday color to text-secondary

--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -146,7 +146,7 @@
             </div>
 
             <div class="row dayoftheweek-row align-items-center">
-                <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Mon</div>
+                <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Mon</div>
                 <div class="col-sm-3 ">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
@@ -171,7 +171,7 @@
             </div>
 
             <div class="row dayoftheweek-row align-items-center">
-                <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Tue</div>
+                <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Tue</div>
                 <div class="col-sm-3 ">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
@@ -196,7 +196,7 @@
             </div>
 
             <div class="row dayoftheweek-row align-items-center">
-                <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Wed</div>
+                <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Wed</div>
                 <div class="col-sm-3 ">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
@@ -221,7 +221,7 @@
             </div>
 
             <div class="row dayoftheweek-row align-items-center">
-                <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Thu</div>
+                <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Thu</div>
                 <div class="col-sm-3 ">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
@@ -246,7 +246,7 @@
             </div>
 
             <div class="row dayoftheweek-row align-items-center">
-                <div class="col-sm-1 text-primary timetable-dayofweek-header align-self-center" >Fri</div>
+                <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Fri</div>
                 <div class="col-sm-3 ">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
