--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -22,8 +22,8 @@
                 <li>Select a subject by clicking once on it, then click on multiple time slots. e.g. <strong>Maths</strong>
                     to 4 different time slots</li>
             </ol>
-            In either case you will be given the option of how much of that session to fill. e.g. 1/3, 1/2 or Full session, or be more specific, say 9:45 to 10:15
-
+            In either case you will be given the option of how much of that session to fill. e.g. 1/3, 1/2 or
+            Full session, or be more specific, say 9:45 to 10:15
         </div>
     </div>
 
@@ -491,6 +491,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
+                    <h4>Quick Select</h4>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">
                         1/3 Session
                         <div class="progress">
@@ -510,17 +511,11 @@
                         </div>
                     </button>
 
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                        Specifically
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </button>
+                    <br>
+                    <hr>
 
-                </div>
-                <div id="addLessonsModalFooter" class="modal-footer" display="none" >
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Add To Timetable</button>
+                    <h4>Precise Lesson Timing</h4>
+
                 </div>
             </div>
         </div>
