calculation of End time works when changing the duration range

--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -518,14 +518,13 @@
 
                     <div class="d-flex justify-content-center">
                         <button id="precise-time-button" type="button" class="btn btn-info quick-select-button" >
-                            Choose Precise Times
+                            ... Or Choose Precise Times
                         </button>
                     </div>
 
                     <hr>
 
                     <div id="precise-lesson-timing-body">
-                        <h4>Precise Lesson Timing</h4>
 
                         <div class="precise-lesson-timing-group">
                             <div class="bootstrap-timepicker timepicker">
@@ -565,7 +564,7 @@
                 template: 'dropdown',
                 showInputs: false,
                 minuteStep: 5,
-                defaultTime: '09:05 AM'
+                defaultTime: '09:40 AM'
             });
 
     </script>
