can now change start time, duration or end time and others will update

--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -561,7 +561,7 @@
             });
 
             $('#timepicker2').timepicker({
-                template: 'dropdown',
+                template: false,
                 showInputs: false,
                 minuteStep: 5,
                 defaultTime: '09:40 AM'
